# check_generic

./: .gitignore  CG_VERSION  Changelog  Makefile.in  README  THANKS  check_generic  configure.ac  example.cmd  hosts_interface  mk_VERSION  subst.in
0.0.1/contrib/: example.cmd  vmstat_cpu_Linux.cmd
0.0.1/trunk/: Changelog
contrib/: Makefile.in  vmstat_cpu_Linux.cmd
plugins/: Makefile.in  check_generic.in
plugins/t/: .gitignore  10_check_generic.t.in  Makefile.in  testopts.pm.in
trunk/contrib/: nagiostats.cmd
